unpackaged/main/default/objects/Forecast_Submit_History__c/Forecast_Submit_History__c.object-meta.xml
<CustomObject>
    <description>Submitted forecast of a user at a particular point in time</description>
    <label>Forecast Submit History</label>
    <nameField>
        <displayFormat>FSH-{0000000}</displayFormat>
        <label>Forecast History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Submit History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>