unpackaged/main/default/objects/Forecast_Submit_History__c/fields/Forecast_User__c.field-meta.xml
<CustomField>
    <fullName>Forecast_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Forecast_Submit_History</relationshipName>
    <type>Lookup</type>
</CustomField>