unpackaged/main/default/objects/Forecast_Submit_History__c/fields/My_Commit__c.field-meta.xml
<CustomField>
    <fullName>My_Commit__c</fullName>
    <label>My Commit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>