unpackaged/main/default/objects/Forecast_Submit_History__c/fields/My_Commit_for_DR__c.field-meta.xml
<CustomField>
    <fullName>My_Commit_for_DR__c</fullName>
    <label>My Commit for DR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>