unpackaged/main/default/objects/Forecast_Submit_History__c/fields/My_DR_Commit_for_their_DR__c.field-meta.xml
<CustomField>
    <fullName>My_DR_Commit_for_their_DR__c</fullName>
    <label>My DR Commit for their DR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>