unpackaged/main/default/objects/Forecast_Submit_History__c/fields/My_Worst_Case__c.field-meta.xml
<CustomField>
    <fullName>My_Worst_Case__c</fullName>
    <label>My Worst Case</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>