unpackaged/main/default/objects/Forecast_Submit_History__c/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <label>Role ID</label>
    <length>21</length>
    <required>true</required>
    <type>Text</type>
</CustomField>