unpackaged/main/default/objects/Forecast_Submit_History__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <description>Name of role - trigger to populate</description>
    <label>Role Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>