unpackaged/main/default/objects/Forecast_Submit_History__c/fields/Submit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date_Time__c</fullName>
    <label>Submit Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>