unpackaged/main/default/objects/Forecast_Submit_History__c/validationRules/Period_Month_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Period_Month_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>Period_Month__c &lt; 1 || Period_Month__c &gt; 12</errorConditionFormula>
    <errorMessage>Please enter valid Month</errorMessage>
</ValidationRule>