unpackaged/main/default/objects/Forecast_Submit_History__c/validationRules/Period_Year_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Period_Year_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>Period_Year__c &lt; 2000 || Period_Year__c &gt; 2999</errorConditionFormula>
    <errorMessage>Please enter valid Year</errorMessage>
</ValidationRule>